# iainote

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md
.github/workflows/: build-matrix.yml  build-release.yml
cli/: Cargo.toml
cli/src/: main.rs
server/: Cargo.toml
server/src/: auth_middleware.rs  config.rs  db.rs  error.rs  main.rs
server/src/ai/: mod.rs
server/src/auth/: mod.rs
server/src/notes/: mod.rs
server/src/tags/: mod.rs
