[workspace]
members = ["server", "cli"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["i3xai <i3xai.ai@gmail.com>"]
license = "MIT OR Apache-2.0"
homepage = "https://iainote.com"
repository = "https://github.com/i3xai/iainote"

[workspace.dependencies]
# Web framework
actix-web = "4"
actix-rt = "2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Authentication
jsonwebtoken = "9"
argon2 = "0.5"
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
base64 = "0.22"

# Web utilities
tiny_http = "0.11"
url = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-actix-web = "0.7"

# Error handling
thiserror = "1"
anyhow = "1"

# Utils
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
once_cell = "1"
