[package]
name = "iainote-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
clap = { version = "4", features = ["derive", "cargo"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", features = ["full"] }
colored = "2"
indicatif = "0.17"
anyhow = "1"
dirs = "5"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
