[package]
name = "iainote-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
actix-web = { workspace = true }
actix-rt = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
base64 = { workspace = true }
tiny_http = { workspace = true }
url = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-actix-web = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }

# Environment config
config = "0.14"

# CORS
actix-cors = "0.7"

[dev-dependencies]
actix-rt = "2"
